# colorist

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Gemfile  README.markdown  README.md  analyze.sh  appveyor.yml  colorist.cppcheck  coverage.sh  tmp.avif
docs/: Cookbook.md  Usage.md
docs/profiles/: HDR_HD_ST2084.icc  HDR_P3_D65_ST2084.icc  HDR_UHD_ST2084.icc
emscripten/: colorist.js  colorist.wasm  index.html  post.js  test.js
ext/: CMakeLists.txt
ext/aom/: CMakeLists.txt
ext/aom/examples/: scalable_decoder.c
ext/apg/: CMakeLists.txt  README.md
ext/apg/examples/: apg_example1.c
ext/apg/ext/: CMakeLists.txt
ext/apg/include/: apg.h
ext/apg/src/: apg.c
ext/avif/: .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  appveyor.yml  fuzz.sh
ext/avif/ext/: aom.cmd  dav1d.cmd  rav1e.cmd
ext/avif/ext/aom/: CMakeLists.txt
ext/avif/ext/aom/aom/src/: aom_image.c
ext/avif/ext/aom/apps/: aomdec.c
ext/avif/ext/aom/av1/: av1_cx_iface.c  av1_dx_iface.c  av1_iface_common.h
ext/avif/ext/aom/av1/common/: av1_inv_txfm1d.c  av1_txfm.h  blockd.c  convolve.c  onyxc_int.h  quant_common.c  reconinter.c  reconinter.h  restoration.c  thread_common.c  tile_common.c  tile_common.h
ext/avif/ext/aom/av1/decoder/: decodeframe.c  decodeframe.h  decodemv.c  decoder.c  decoder.h  obu.c
ext/avif/ext/aom/av1/encoder/: block.h  encodeframe.c  rdopt.c  speed_features.c
ext/avif/ext/aom/common/: obudec.c  tools_common.c  tools_common.h  y4menc.h
ext/avif/ext/aom/examples/: lightfield_bitstream_parsing.c  lightfield_decoder.c  lightfield_tile_list_decoder.c
ext/avif/ext/aom/test/: av1_round_shift_array_test.cc  decode_multithreaded_test.cc  ethread_test.cc  fft_test.cc
ext/avif/include/avif/: avif.h  internal.h
ext/avif/src/: codec_dav1d.c  codec_rav1e.c  write.c
ext/genHeader/: CMakeLists.txt  genHeader.c
ext/jpeg/: jconfig.h  jmorecfg.h
ext/jxrlib/: CMakeLists.txt  Makefile
ext/jxrlib/common/include/: wmsal.h  wmspecstring.h  wmspecstrings_adt.h  wmspecstrings_strict.h  wmspecstrings_undef.h
ext/jxrlib/image/sys/: strcodec.c  strcodec.h  windowsmediaphoto.h
ext/jxrlib/jxrencoderdecoder/: JxrDecApp.c  JxrEncApp.c
ext/jxrlib/jxrgluelib/: JXRGlue.c  JXRGlue.h  JXRGlueJxr.c
ext/libde265/: Makefile.in  aclocal.m4  configure
ext/libde265/acceleration-speed/: Makefile.in
ext/libde265/dec265/: Makefile.in
ext/libde265/enc265/: Makefile.in
ext/libde265/libde265/: CMakeLists.txt  Makefile.in
ext/libde265/libde265/arm/: Makefile.in
ext/libde265/libde265/encoder/: CMakeLists.txt  Makefile.in
ext/libde265/libde265/encoder/algo/: Makefile.in
ext/libde265/libde265/x86/: Makefile.in
ext/libde265/sherlock265/: Makefile.in
ext/libde265/tools/: Makefile.in
ext/libheif/libheif/: CMakeLists.txt
ext/libheif/scripts/: prepare-appveyor.cmd
ext/libjpeg-turbo/: CMakeLists.txt
ext/libwebp/: CMakeLists.txt
ext/md5/: md5.c  md5.h
ext/openjpeg/src/lib/openjp2/: jp2.c
ext/x265/: .hg_archival.txt  .hgignore
ext/x265/doc/reST/: releasenotes.rst
ext/x265/source/: x265.def.in  x265.rc.in
ext/x265/source/cmake/: cmake_uninstall.cmake.in
ext/x265/source/common/: lowpassdct.cpp
ext/x265/source/common/x86/: README.txt  h-ipfilter16.asm  h4-ipfilter16.asm  v4-ipfilter16.asm
lib/: CMakeLists.txt  bin2h.cmake
lib/include/colorist/: ccmm.h  colorist.h  context.h  embedded.h  image.h  pixelmath.h  profile.h  raw.h  task.h  transform.h  types.h  version.h  yuv.h
lib/js/: reportTemplate.js
lib/src/: ccmm.c  colorist.c  context.c  context_convert.c  context_formats.c  context_generate.c  context_highlight.c  context_identify.c  context_log.c  context_memory.c  context_modify.c  context_report.c  context_run.c  context_rw.c  context_version.c  embedded.c  format_apg.c  format_avif.c  format_bmp.c  format_jp2.c  format_jpg.c  format_jxr.c  format_png.c  format_tiff.c  format_webp.c  image.c  image_bmp.c  image_convert.c  image_debugdump.c  image_diff.c  image_draw.c  image_heif.c  image_highlight.c  image_jp2.c  image_jpg.c  image_jxr.c  image_png.c  image_stats.c  image_string.c  image_tiff.c  (+14 more)
lib/templates/: Cakefile  package-lock.json  package.json  reportTemplate.html
lib/templates/src/: report.coffee  report.html
lib/templates/src/coffee/: App.coffee  ImageCache.coffee  ImageRenderer.coffee  InfoPanel.coffee  PixelsView.coffee  RawView.coffee  StructArray.coffee  SummaryView.coffee  TopBar.coffee  TouchDiv.coffee  colormath.coffee  report.coffee  tags.coffee  utils.coffee
lib/templates/src/raw/: cie.html  crosshairs.html  report.html
scripts/: README.txt  build.sh  build_macos.sh  colorist.cppcheck  coverage.sh  io.sh  serve.sh  tidy.sh
test/: bad.icc  red_png_no_ext
